test/files/pos/t11820/Client_2.scala
class Client(a: Int) extends C(a)

