test/files/neg/macro-constructor-super/Test_2.scala
class D extends C(42)